--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Toolshed of Dingyi
 author: Dingyi Lai
 url: https://dingyi-lai.github.io/ # root address of the site
 description: > # description of the site (multiple lines allowed)
-  The path to Dingyi's secret garden, with all magics that I collected within this toolshed.
+  A toolshed in my secret garden, with all magics that I have collected all around.
 
 permalink: /:slug
 
