--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,22 @@
-title: Toolshed of Dingyi
-author: Dingyi Lai
-url: https://dingyi-lai.github.io/ # root address of the site
-baseurl: https://github.com/Dingyi-Lai/Dingyi-Lai.github.io # root address of the site
+title: Moonwalk
+author: Abhinav Saxena
+url: https://www.abhinavsaxena.com/moonwalk # root address of the site
 description: > # description of the site (multiple lines allowed)
-  A toolshed in my secret garden, with all magics that I have collected all around.
+  Moonwalk is a fast and elegant Jekyll theme with a clean dark mode. It comes with horizontal list (for navbar and footer), card list (for portfolio), and a generic vertical list. It is very easy to modify in case you want to build over it - please see _layouts/home.html to do that.
 
 permalink: /:slug
 
 favicon: "./logo.png" # relative path to site's favicon
 
-LeetCode:
-    username: Dingyi # update or delete this
+twitter:
+    username: abhinav # update or delete this
     card: summary_large_image
 
 #theme: moonwalk # if you are using GitHub Pages, change it to remote_theme: abhinavs/moonwalk
 remote_theme: abhinavs/moonwalk
 
 theme_config:
-  appearance: "light" # can be "light", "dark" or "auto"
+  appearance: "dark" # can be "light", "dark" or "auto"
   appearance_toggle: true # if appearance can be switched by user
   back_home_text: "home.." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
@@ -43,9 +42,8 @@ soopr:
 highlighter: rouge
 
 sass:
-  style: :compressed  
+  style: :compressed
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  # - jekyll-pdf-embed
