--- a/_data/home.yml
+++ b/_data/home.yml
@@ -97,8 +97,8 @@ footer_entries:
   - title: GitHub
     url: https://github.com/Dingyi-Lai
 
-  - title: Feed
-    url: feed.xml
+  - title: LinkedIn
+    url: https://www.linkedin.com/in/dingyi-lai-43b72b1aa/
 
 misc_entries:
   - title: this is an example vertical list
