--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,6 +9,11 @@ navbar_entries:
     url: https://dingyi-lai.github.io/
 
 project_entries:
+  - title: Causal effect estimation for time series
+    url: causal-ml
+    desc: Master's Thesis
+    highlight: Structual_Causal_Model Synthetic_Control_Method Decounfounding
+
   - title: How to predict risk in return by an online retailer?
     url: prediction-of-return
     desc: Assignment of Business Analytics and Data Science WiSe20/21 (HU Berlin)
