--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,6 +9,11 @@ navbar_entries:
     url: https://dingyi-lai.github.io/
 
 project_entries:
+  - title: LLMs learning
+    url: LLMs
+    desc: Interesting Topics
+    highlight: LLM
+
   - title: Causal effect estimation for time series
     url: causal-ml
     desc: Master's Thesis
