--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,7 +10,7 @@ navbar_entries:
 
 project_entries:
   - title: LLMs learning
-    url: LLMs
+    url: llms
     desc: Interesting Topics
     highlight: LLM
 
