--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,8 +9,8 @@ navbar_entries:
     url: https://dingyi-lai.github.io/
 
 project_entries:
-  - title: LLMs learning
-    url: llms
+  - title: LLMs learning notes
+    url: large-language-models
     desc: Interesting Topics
     highlight: LLM
 
