--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,6 +9,11 @@ navbar_entries:
     url: https://dingyi-lai.github.io/
 
 project_entries:
+  - title: Basic Introduction to Spline Regression
+    url: spline-regression
+    desc: The relationship between the degree of freedom and the number of knots in the spline
+    highlight: Spline
+
   - title: LLMs learning notes
     url: large-language-models
     desc: Interesting Topics
