--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,8 +10,8 @@ navbar_entries:
 
 project_entries:
   - title: From Slurm Batch Workflow to Kafka Pipline Using Python
-    url: from-Slurm-batch-workflow-to-kafka-pipline-using-python
-    desc: 复现 HAICORE 上基于 Slurm 的批处理脚本，并演示如何将其改写为基于 kafka-python 的 Producer/Consumer 示例
+    url: from-slurm-batch-workflow-to-kafka-pipline-using-python
+    desc: reproduce a HAICORE/Slurm batch workflow as a real-time Kafka pipeline using Python and `kafka-python`
     highlight: bigdata
 
   - title: Parrallel and Concurrent Computing in Python
