--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,9 +9,14 @@ navbar_entries:
     url: https://dingyi-lai.github.io/
 
 project_entries:
+  - title: Difference Between PostgreSQL and MySQL
+      url: from-slurm-batch-workflow-to-kafka-pipline-using-python
+      desc: Deeper understanding of PostgreSQL and MySQL as open-source relational database management systems (RDBMS)
+      highlight: database
+
   - title: From Slurm Batch Workflow to Kafka Pipline Using Python
     url: from-slurm-batch-workflow-to-kafka-pipline-using-python
-    desc: reproduce a HAICORE/Slurm batch workflow as a real-time Kafka pipeline using Python and `kafka-python`
+    desc: Reproduce a HAICORE/Slurm batch workflow as a real-time Kafka pipeline using Python and `kafka-python`
     highlight: bigdata
 
   - title: Parrallel and Concurrent Computing in Python
